# Flight_Data_Intelligence

./: README.md
Flight_Data_intelligence/: .gitignore  CMakeLists.txt  GitHub SSH"[D[D[D[D[D[D[D[D[D[D[D[D"[C[C[C[C[C[C[C[C[C[C[C[C[C  GitHub SSH"[D[D[D[D[D[D[D[D[D[D[D[D"[C[C[C[C[C[C[C[C[C[C[C[C[C.pub  README.md  requirements.txt
Flight_Data_intelligence/.github/: ci.yml
Flight_Data_intelligence/docker/: Dockerfile.pipeline  docker-compose.yml
Flight_Data_intelligence/include/: parser.h  ring_buffer.h  telemetry.h
Flight_Data_intelligence/scripts/: api.py  pipeline.py  simulator.py  train_model.py
Flight_Data_intelligence/src/: main.cpp  parser.cpp
Flight_Data_intelligence/tests/: test_parser.cpp  test_ring_buffer.cpp
